// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`slider [snapshot] > default 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_1s_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_1t_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="50"
          aria-valuetext="50"
          id="base-ui-_r_1v_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > disabled 1`] = `
<div
  class="vesper-range"
  data-disabled=""
  data-orientation="horizontal"
  id="base-ui-_r_2c_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-disabled=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-disabled=""
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-disabled=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-disabled=""
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_2d_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="50"
          aria-valuetext="50"
          disabled=""
          id="base-ui-_r_2f_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > variant: default 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_2g_"
  role="group"
  variant="default"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_2h_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="50"
          aria-valuetext="50"
          id="base-ui-_r_2j_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > variant: error 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_2o_"
  role="group"
  variant="error"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_2p_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="50"
          aria-valuetext="50"
          id="base-ui-_r_2r_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > variant: success 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_2s_"
  role="group"
  variant="success"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_2t_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="50"
          aria-valuetext="50"
          id="base-ui-_r_2v_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > variant: warning 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_2k_"
  role="group"
  variant="warning"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_2l_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="50"
          aria-valuetext="50"
          id="base-ui-_r_2n_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > with custom min/max/step 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_20_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 40.386473429951685%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_21_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 40.386473429951685%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="4"
          aria-valuetext="4"
          id="base-ui-_r_23_"
          max="10"
          min="0"
          step="2"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > with ticks 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_24_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.2;"
      />
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.4;"
      />
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.6;"
      />
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.8;"
      />
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 40.386473429951685%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_25_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 40.386473429951685%;"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="2"
          aria-valuetext="2"
          id="base-ui-_r_27_"
          max="5"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`slider [snapshot] > with value label 1`] = `
<div
  class="vesper-range vesper-range-labeled"
  data-orientation="horizontal"
  id="base-ui-_r_28_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="position: relative; height: inherit; --start-position: 74.03381642512076%; inset-inline-start: 0px; width: var(--start-position);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_29_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 74.03381642512076%; --vesper-range-thumb-label: "75%";"
      >
        <input
          aria-label="Volume"
          aria-orientation="horizontal"
          aria-valuenow="75"
          aria-valuetext="75%"
          id="base-ui-_r_2b_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="75"
        />
      </div>
    </div>
  </div>
</div>
`;
